<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#9ae6da"
    tools:context="com.vanessa.appcompras_m171.FormularioActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeProduto" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNome"
        android:id="@+id/etNomeAnimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#7985de"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtIdade"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintIdade"
        android:id="@+id/etIdade"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#7985de"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEspecie"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spEspecie">


    </Spinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#7985de"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">



    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSalvar"
        android:background="#c9a"
        android:textColor="#fff"
        android:id="@+id/btnSalvar"/>

</LinearLayout>
